Fix spacing for full-width layout

--- a/app/styles/components/page-title.scss
+++ b/app/styles/components/page-title.scss
@@ -3,6 +3,8 @@
   color: #aaa;
   text-transform: uppercase;
   letter-spacing: 1.5px;
-  padding-bottom: 15px;
+  margin-top: 5px;
+  padding: 15px;
+  line-height: 0.9;
   border-bottom: 1px solid #eee;
 }
