--- a/app/styles/components/rt-arrival.scss
+++ b/app/styles/components/rt-arrival.scss
@@ -1,5 +1,4 @@
 .rt-arrival {
-  border: 1px solid;
-  border-radius: 3px;
-  padding: 15px;
+  border-bottom: 1px solid;
+  padding: 18px 15px 17px 15px;
 }
