--- a/app/styles/utils.scss
+++ b/app/styles/utils.scss
@@ -16,3 +16,11 @@
   list-style: none;
 }
 
+.soft-sides {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.pull-top {
+  margin-top: -15px;
+}
